# spacy_ne

./: .gitignore  README.md  base_config.cfg  project.yml  pyproject.toml
scripts/: functions.py
