[tool.poetry]
name = "spacy_ne"
version = "0.1.0"
description = ""
authors = ["Sanjaya Subedi <sanjaya.subedi@serviceware.se>"]

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
flake8 = "^4.0.1"
rope = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
